--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
     android:theme="@style/AppTheme">
     <activity
       android:label="@string/title_activity_chat"
-      android:name=".ui.chat.ChatActivity"
-      android:theme="@style/AppTheme.NoActionBar">
+      android:name=".ui.chat.ChatActivity">
     </activity>
     <activity
       android:label="@string/app_name"
@@ -28,6 +27,7 @@
       android:name="preloaded_fonts"
       android:resource="@array/preloaded_fonts"/>
   </application>
-  <uses-permission android:name="android.permission.INTERNET" />
+
+  <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
